Se agrega subida de fotos para los autos
