# Models/Responses/Catalogo/FotoAutoResponse.cs
@@ -1,0 +1,7 @@
+namespace ApiComercial.Models.Responses.Catalogo;
+public class FotoAutoResponse
+{
+    public int Id { get; set; }
+    public string? UrlFoto { get; set; }
+    public bool EsPrincipal { get; set; }
+}
